[project]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
exclude = '''
/(
  \.git
  | __pycache__
  | venv
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "venv"]
max-complexity = 10

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
